cleanup and login registrasi revamp

--- a/account/templates/account/account_profile.html
+++ b/account/templates/account/account_profile.html
@@ -48,7 +48,7 @@
                                            <div class="r-1adg3ll r-13qz1uu" style="padding-bottom: 100%;"></div>
                                            <div class="r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-ipm5af r-13qz1uu">
                                               <div aria-label="" class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010">
-                                                 <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;https://pbs.twimg.com/profile_images/1247889793255538688/NqA3Fe7q_200x200.jpg&quot;);"></div>
+                                                 <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;https://www.seekpng.com/png/detail/72-729756_how-to-add-a-new-user-to-your.png&quot;);"></div>
                                                  <img alt="" draggable="true" src="{{account.profile_image.url}}">
                                               </div>
                                            </div>
