--- a/templates/snippets/css/twitter_style.html
+++ b/templates/snippets/css/twitter_style.html
@@ -65,6 +65,15 @@
     .r-bnwqim {
         position: relative;
     }
+    .r-18jsvk2{
+        color: rgb(15, 20, 25) !important;
+    }
+    .r-fm7h5w{
+        font-family: TwitterChirpExtendedHeavy, Verdana, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    }
+    .r-19oahor{
+        font-size: 64px !important;
+    }
     .r-1kihuf0{
         align-self: center;
     }
@@ -112,6 +121,21 @@
     .r-1777fci{
         -moz-box-pack: center;
         justify-content: center;
+    }
+    .r-1qmwkkh{
+        min-width: 45vw;
+    }
+    .r-nsbfu8{
+        padding: 16px;
+    }
+    .r-jjmaes{
+        max-width: 760px;
+    }
+    .r-1nz9sz9{
+        min-width: 437px;
+    }
+    .r-1pcd2l5{
+        padding: 20px;
     }
     .r-s8bhmr{
         min-width: 56px;
@@ -194,6 +218,10 @@
     .r-1ny4l3l {
         outline-style: none;
     }
+    .r-1dye5f7{
+        padding-left: 32px;
+        padding-right: 32px;
+    }
     .r-1qhn6m8{
         padding-left: 16px;
     }
@@ -208,7 +236,7 @@
         opacity: 0;
     }
     .r-1loqt21 {
-        cursor: pointer;
+        cursor: pointer !important;
     }
     .r-1ta3fxp {
         column-gap: 8px;
@@ -268,6 +296,9 @@
     .r-95jzfe{
         padding-top: 16px;
     }
+    .r-13f91hp{
+        transition: -webkit-transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0s, transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0s, color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0s, font-size 150ms cubic-bezier(0.4, 0, 0.2, 1) 0s, padding-top 150ms cubic-bezier(0.4, 0, 0.2, 1) 0s;
+    }
     .r-cpa5s6{
         scroll-snap-align: start;
     }
@@ -314,6 +345,9 @@
     .r-4qtqp9{
         display: inline-block !important;
     }
+    .r-5sfk15{
+        height: 3rem;
+    }
     .r-yyyyoo{
         fill: currentcolor;
     }
@@ -329,8 +363,40 @@
     .r-lrvibr{
         user-select: none;
     }
+    .r-1wzrnnt{
+        margin-top: 16px;
+    }
     .r-13awgt0{
         flex: 1 1 0%;
+    }
+    .r-1ah4tor{
+        padding-right: 20px;
+    }
+    .r-117bsoe{
+        margin-bottom: 20px !important;
+    }
+    .r-17w48nw{
+        max-width: 380px;
+    }
+    .r-19yznuf{
+        min-height: 52px;
+    }
+    .r-64el8z{
+        min-width: 52px;
+    }
+    .r-791edh{
+        flex: 1 1 auto;
+    }
+    .r-1euycsn{
+        -webkit-box-direction: reverse;
+        -webkit-box-orient: horizontal;
+        flex-direction: row-reverse;
+    }
+    .r-tv6buo{
+        min-height: auto;
+    }
+    .r-12vffkv{
+        /* pointer-events: none; */
     }
     .r-19wmn03{
         width: 20px;
@@ -340,6 +406,9 @@
     }
     .r-1udh08x{
         overflow: hidden;
+    }
+    .r-xd6kpl{
+        padding-bottom: 8px;
     }
     .r-kemksi{
         background-color: rgb(0, 0, 0);
@@ -385,7 +454,7 @@
         left: 0px;
     }
     .r-sdzlij{
-        border-radius: 9999px;
+        border-radius: 9999px !important;
     }
     .r-172uzmj{
         box-shadow: rgba(255, 255, 255, 0.03) 0px 0px 2px inset;
@@ -436,6 +505,12 @@
     }
     .r-1niwhzg{
         background-color: rgba(0, 0, 0, 0);
+    }
+    .r-1ets6dv{
+        border-color: rgb(207, 217, 222);
+    }
+    .r-z2wwpe{
+        border-radius: 4px;
     }
     .r-vvn4in{
         background-position: center center;
@@ -512,6 +587,9 @@
     .r-k200y{
     	align-self: flex-start;
     }
+    .r-1cvl2hr{
+        color: rgb(29, 155, 240);
+    }
     .r-z80fyv{
     	height: 20px;
     }
@@ -531,6 +609,10 @@
     .r-135wba7{
     	line-height: 24px !important; 
     }
+    .r-1pn2ns4{
+        padding-left: 8px !important;
+        padding-right: 8px !important;
+    }
     .r-56xrmm{
         line-height: 12px !important;
     }
@@ -542,6 +624,25 @@
     }
     .r-b88u0q{
     	font-weight: 700 !important;
+    }
+    .r-nm9kes{
+        letter-spacing: -1.2px;
+    }
+    .r-1ncnki0{
+        line-height: 84px !important;
+    }
+    .r-4afqvc{
+        margin-bottom: 48px !important;
+        margin-top: 48px !important;
+    }
+    .r-1yjpyg1{
+        font-size: 31px !important;
+    }
+    .r-ueyrd6{
+        line-height: 36px !important;
+    }
+    .r-zd98yo{
+        margin-bottom: 32px !important;
     }
     .r-vmopo1{
     	padding-top: 2px;
@@ -568,6 +669,22 @@
     .r-wwvuq4{
         padding: 0px;
     }
+    .r-150rngu{
+
+    }
+    .r-l5o3uw{
+        background-color: rgb(29, 155, 240) !important;
+    }
+    .r-1inkyih{
+        font-size: 17px;
+    }
+    .r-mk0yit{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    .r-14j79pv{
+        color: rgb(83, 100, 113);
+    }
     .css-4rbku5 {
         background-color: rgba(0, 0, 0, 0);
         color: inherit;
@@ -581,7 +698,7 @@
         text-decoration: none;
     }
     .css-18t94o4 {
-        cursor: pointer;
+        cursor: pointer !important;
     }
     .css-9pa8cd{
         inset: 0px;
