--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -1,9 +1,3 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block content %}
-
-
 <style type="text/css">
 
   .card-signin {
@@ -27,14 +21,12 @@
 
 </style>
 
-<div class="container-fluid">
+<div class="container-fluid mb-4" style="font: 17px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 	<div class="row justify-content-center">
 		<div class="card card-signin">
 		  <div class="card-body">
 		    <form class="form-signin" method="post">{% csrf_token %}
-				<!--<div class="d-flex flex-column pb-3">
-				<img class="img-fluid mx-auto d-block" src="{% static 'img/logo_250_250_transparent.png' %}" alt="logo" width="72" height="72">
-				</div>-->
+				
 				<div class="d-flex flex-column pb-3">
 					<h3 style="text-align: center;vertical-align: middle;">Login</h3>
 				</div>
@@ -68,5 +60,3 @@
 		
 	</div>
 </div>
-
-{% endblock content %}
