--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,9 +1,3 @@
-{% extends 'base.html' %}
-{% load static %}
-
-{% block content %}
-
-
 <style type="text/css">
 
   .card-signin {
@@ -32,18 +26,19 @@
 
 </style>
 
-<div class="container-fluid">
+<div class="container-fluid mb-4" style="font: 17px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 	<div class="row justify-content-center">
 		<div class="card card-signin">
 		  <div class="card-body">
 		    <form class="form-signin" method="post">{% csrf_token %}
-				<!--<div class="d-flex flex-column pb-3">
-				<img class="img-fluid mx-auto d-block" src="{% static 'img/logo_250_250_transparent.png' %}" alt="logo" width="72" height="72">
-				</div>-->
+				
 				<div class="d-flex flex-column pb-3">
-					<h3 style="text-align: center;vertical-align: middle;">Register</h3>
+				<div class="container-fluid" style="font: 17px -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+					<h3 style="text-align: center;vertical-align: middle; ">Register</h3>
 				</div>
 				<br>
+
+				
 				<input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 
 				<input type="text" name="username" id="inputUsername" class="form-control" placeholder="Username" required>
@@ -65,14 +60,12 @@
 				</div>
 
 				{% endif %}
-
-				<button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-
+				
+				<button class="btn btn-lg btn-primary btn-block" type="submit" name="btnRegis">Register</button>
+				
 				</form>
 		  </div>
 		</div>
 		
 	</div>
 </div>
-
-{% endblock content %}
