--- a/post/templates/post/snippets/tweet_style.html
+++ b/post/templates/post/snippets/tweet_style.html
@@ -42,11 +42,14 @@
     .tweet-wrap {
       /*background: #fff;*/
       background: #000;
-      border-radius:10px;
+      /* border-radius:10px; */
       padding: 20px;
-      border-bottom: 1px solid #e6ecf0;
-      border-top: 1px solid #e6ecf0;
-      box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white);
+      border-bottom: 0.5px solid #e6ecf0;
+      border-left: 1px solid #e6ecf0;
+      border-right: 1px solid #e6ecf0;
+      border-top: 0.5px solid #e6ecf0;
+      /* border-top: 1px solid #e6ecf0; */
+      /* box-shadow: 0.1rem 0.1rem 0.1rem var(--greyLight-2), -0.1rem -0.1rem 0.8rem var(--white); */
     }
 
     .tweet-header {
