--- a/templates/snippets/right-sidebar-test-2.html
+++ b/templates/snippets/right-sidebar-test-2.html
@@ -35,6 +35,7 @@
                               <!-- End not needed -->
                            </h2>
                         </div>
+                        {% if forum_newest %}
                         {% for obj in forum_newest %}
                         <div class="css-1dbjc4n r-1adg3ll r-1ny4l3l">
                            <a href="{% url 'forum:forum-detail' obj.pk %}" rel="noopener noreferrer" target="_blank" role="link" class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1ny4l3l r-1udh08x r-o7ynqc r-6416eg r-13qz1uu">
@@ -70,6 +71,19 @@
                            </a>
                         </div>
                         {% endfor %}
+                        {% else %}
+                        <div class="css-1dbjc4n r-1adg3ll r-1ny4l3l">
+                           <div tabindex="0" class="css-1dbjc4n r-1loqt21 r-6koalj r-1ny4l3l r-ymttw5 r-1f1sjgu r-o7ynqc r-6416eg hoverable" data-testid="trend" role="link">
+                              <div class="css-1dbjc4n r-16y2uox r-bnwqim">
+                                 <div class="css-1dbjc4n r-1d09ksm r-18u37iz r-1wbh5a2">
+                                    <div dir="auto" class="css-901oao r-9ilb82 r-37j5jr r-n6v787 r-16dba41 r-1cwl3u0 r-bcqeeo r-qvutc0"><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Latest subscribed forum will showed here</span></div>
+                                 </div>
+                                 
+                              </div>
+                           </div>
+                           </a>
+                        </div>
+                        {% endif %}
                      </div>
                   </div>
                </div>
