--- a/post/templates/post/snippets/post_list_body_2.html
+++ b/post/templates/post/snippets/post_list_body_2.html
@@ -4,7 +4,11 @@
 
 {% for result in results %}
     {% if forloop.last %}
+    {% if results.has_next %}
     <div class="tweet-wrap" hx-get="{% url 'home' %}?page={{ results.next_page_number }}" hx-trigger="revealed" hx-swap="afterend" hx-target="this">
+    {% else %}
+    <div class="tweet-wrap">
+    {% endif %}
     {% else %}
     <div class="tweet-wrap">
     {% endif %}
