--- a/account/templates/account/search_results.html
+++ b/account/templates/account/search_results.html
@@ -14,7 +14,7 @@
     <article style="padding-right: 18px; padding-left: 18px; overflow: hidden; flex-direction: row; display: flex; font-size: 20px;">
         <div class="css-1dbjc4n r-1awozwy r-1hwvwag r-18kxxzh r-1b7u577">
           <a href="{% url 'account:view' user_id=result.pk %}">
-              <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" src="{{ result.profile_image.url }}" />
+              <img class="mr-3 circle-rounded avator" style="float: left;margin-right: 1rem;" width="50" height="50" {% if result.profile_image %}src="{{ result.profile_image.url }}"{% else %} src="https://www.seekpng.com/png/detail/72-729756_how-to-add-a-new-user-to-your.png" {% endif %} />
           </a>
         </div>
         <div class="css-1dbjc4n r-1iusvr4 r-16y2uox r-1777fci r-kzbkwu">
@@ -26,7 +26,7 @@
                   <div class="css-1dbjc4n r-1wbh5a2 r-dnmrzs">
                     <a href="{% url 'account:view' user_id=result.pk %}" 
                     class="css-4rbku5 css-18t94o4 css-1dbjc4n r-1loqt21 r-1wbh5a2 r-dnmrzs r-1ny4l3l">
-                      <span class="post-name-color"><strong>{{result.profile.fullname}}</strong>
+                      <span class="post-name-color"><strong>{% if result.profile.fullname %}{{result.profile.fullname}}{% endif %}</strong>
                         
                       </span>
                     </a>
