--- a/templates/base_2.html
+++ b/templates/base_2.html
@@ -20,11 +20,12 @@
                           <div class="css-1dbjc4n r-791edh r-1euycsn r-tv6buo">
                              <div class="css-1dbjc4n r-1777fci r-1qmwkkh r-nsbfu8" >
                                 <div class="css-1dbjc4n r-jjmaes r-1nz9sz9 r-1pcd2l5 r-13qz1uu">
-                                   <svg viewBox="0 0 24 24" aria-hidden="true" class="r-k200y r-1cvl2hr r-4qtqp9 r-yyyyoo r-5sfk15 r-dnmrzs r-kzbkwu r-bnwqim r-1plcrui r-lrvibr">
+                                   <!-- <svg viewBox="0 0 24 24" aria-hidden="true" class="r-k200y r-1cvl2hr r-4qtqp9 r-yyyyoo r-5sfk15 r-dnmrzs r-kzbkwu r-bnwqim r-1plcrui r-lrvibr">
                                       <g>
                                          <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"></path>
                                       </g>
-                                   </svg>
+                                   </svg> -->
+                                   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9c/Logo_Politeknik_Negeri_Padang_%282014%29.svg/1200px-Logo_Politeknik_Negeri_Padang_%282014%29.svg.png" alt="" style="width: 50; height: 50;">
                                    <div dir="auto" class="css-901oao r-18jsvk2 r-fm7h5w r-19oahor r-b88u0q r-nm9kes r-1ncnki0 r-4afqvc r-bcqeeo r-qvutc0" style=""><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">PNP Talk</span></div>
                                    <div dir="auto" class="css-901oao r-18jsvk2 r-fm7h5w r-1yjpyg1 r-b88u0q r-ueyrd6 r-zd98yo r-bcqeeo r-qvutc0" style=""><span class="css-901oao css-16my406 r-poiln3 r-bcqeeo r-qvutc0">Join PNP Talk today.</span></div>
                                    <div class="css-1dbjc4n"  id="replacableTarget">
@@ -56,15 +57,15 @@
                                 <div class="css-1dbjc4n r-l5o3uw r-1p0dtai r-13awgt0 r-1777fci r-1d2f490 r-u8s1d r-u9bbvc r-zchlnj r-ipm5af">
                                    <div class="css-1dbjc4n r-1p0dtai r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af">
                                       <div aria-label="" class="css-1dbjc4n r-1p0dtai r-1mlwlqe r-1d2f490 r-1udh08x r-u8s1d r-zchlnj r-ipm5af r-417010" style="margin: 0px;">
-                                         <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;https://abs.twimg.com/sticky/illustrations/lohp_en_1302x955.png&quot;);"></div>
-                                         <img alt="" draggable="false" src="https://abs.twimg.com/sticky/illustrations/lohp_en_1302x955.png" class="css-9pa8cd">
+                                         <div class="css-1dbjc4n r-1niwhzg r-vvn4in r-u6sd8q r-4gszlv r-1p0dtai r-1pi2tsx r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-13qz1uu r-1wyyakw" style="background-image: url(&quot;https://django-pnp-talk.s3.ap-southeast-1.amazonaws.com/app_logo.jpeg&quot;);"></div>
+                                         <img alt="" draggable="false" src="{% static 'img/app_logo.png' %}" class="css-9pa8cd">
                                       </div>
                                    </div>
-                                   <svg viewBox="0 0 24 24" aria-hidden="true" class="r-jwli3a r-4qtqp9 r-yyyyoo r-rxcuwo r-1777fci r-m327ed r-dnmrzs r-494qqr r-bnwqim r-1plcrui r-lrvibr">
+                                   <!-- <svg viewBox="0 0 24 24" aria-hidden="true" class="r-jwli3a r-4qtqp9 r-yyyyoo r-rxcuwo r-1777fci r-m327ed r-dnmrzs r-494qqr r-bnwqim r-1plcrui r-lrvibr">
                                       <g>
                                          <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"></path>
                                       </g>
-                                   </svg>
+                                   </svg> -->
                                 </div>
                              </div>
                           </div>
