--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,5 +1,5 @@
 <div class="footer">
     <div class="copyright">
-        <p>Copyright &copy;</p>
+        <p>Copyright &copy; SteveG08(AFMS)</p>
     </div>
 </div>
