--- a/templates/snippets/sidebar_2.html
+++ b/templates/snippets/sidebar_2.html
@@ -43,7 +43,7 @@
         </li>
         <li class="nav-label">Profile</li>
         <li>
-            <a href="{% url 'account:view' user_id=request.user.id %}" aria-expanded="false">
+            <a href="#" aria-expanded="false">
                 <i class="far fa-user"></i><span class="nav-text">Account</span>
             </a>
         </li>
