fix bug marketplace

--- a/templates/snippets/header_2.html
+++ b/templates/snippets/header_2.html
@@ -104,7 +104,7 @@
                                 </li>
                                 <li>
                                     <!-- BIG WARNING, EDIT IN PRODUCTION -->
-                                    <a href="http://127.0.0.1:8000/lock/?next={{request.path}} " style="text-decoration: none;"><i class="fas fa-key"></i><span>Lock Screen</span></a>
+                                    <a href="https://pnptalk.herokuapp.com/lock/?next={{request.path}} " style="text-decoration: none;"><i class="fas fa-key"></i><span>Lock Screen</span></a>
                                 </li>
                                 <li>
                                     <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt" style="text-decoration: none;"></i><span>Logout</span></a>
